force-app/main/default/objects/Violation__c/Violation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Violation</label>
    <nameField>
        <label>Section</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>