force-app/main/default/objects/Violation__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <label>Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>