force-app/main/default/objects/Violation__c/fields/SectionType__c.field-meta.xml
<CustomField>
    <fullName>SectionType__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HAR</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>